--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "openai": "^5.8.1",
     "openrouteservice-js": "^0.4.1",
     "razorpay": "^2.9.6",
+    "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
     "ws": "8.18.3"
   },
