--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-calendars": "^1.1304.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-emoji-selector": "^0.2.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-file-access": "^3.2.0",
     "react-native-file-picker": "^0.0.21",
     "react-native-fs": "^2.20.0",
