--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.79.2",
     "react-native-animatable": "^1.4.0",
     "react-native-audio-recorder-player": "^4.5.0",
+    "react-native-blob-util": "^0.23.1",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-calendars": "^1.1304.0",
     "react-native-dropdown-picker": "^5.4.6",
@@ -53,6 +54,7 @@
     "react-native-nitro-modules": "^0.29.2",
     "react-native-pager-view": "^6.8.1",
     "react-native-paper": "^5.14.5",
+    "react-native-pdf": "^7.0.3",
     "react-native-permissions": "^5.4.2",
     "react-native-picker-select": "^9.3.1",
     "react-native-progress": "^5.0.1",
