--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@maplibre/maplibre-react-native": "^10.2.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-camera-roll/camera-roll": "^7.10.2",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/datetimepicker": "^8.4.5",
     "@react-native-documents/picker": "^10.1.5",
     "@react-native-picker/picker": "^2.11.0",
