report card screen updated

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-blob-util": "^0.23.1",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-calendars": "^1.1304.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-emoji-selector": "^0.2.0",
     "react-native-fast-image": "^8.6.3",
@@ -64,7 +65,8 @@
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
     "react-native-simple-toast": "^3.3.2",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "^15.15.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-tab-view": "^4.1.2",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
@@ -74,13 +76,14 @@
     "rn-emoji-keyboard": "^1.7.0",
     "rn-fetch-blob": "^0.12.0",
     "socket.io-client": "^4.8.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "victory-native": "^41.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "18.0.0",
+    "@react-native-community/cli": "^18.0.1",
     "@react-native-community/cli-platform-android": "18.0.0",
     "@react-native-community/cli-platform-ios": "18.0.0",
     "@react-native/babel-preset": "0.79.2",
