--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
     
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
