--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VPS_ERP",
+  "name": "VPS",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -72,7 +72,6 @@
     "react-native-view-shot": "^4.0.3",
     "react-native-webview": "^13.14.0",
     "rn-emoji-keyboard": "^1.7.0",
-    "rn-fetch-blob": "^0.12.0",
     "socket.io-client": "^4.8.1",
     "uuid": "^13.0.0",
     "victory-native": "^41.20.2"
